Remove notes about truly ancient versions of Leiningen or Java.